Introduction of Text Document API